--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-app",
   "version": "1.0.0",
-  "description": "A Node.js todo application with EJS templating",
+  "description": "A simple todo application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -17,13 +17,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "mongoose": "^6.10.0"
+    "express": "^4.21.2",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.12.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
-} 
+}
